syntax="proto3";

package discount;

service DiscountService{
    rpc Get(GetRequest) returns (ProductDiscount) {};
    rpc List(ListRequest) returns(ListResponse) {};
}


message GetRequest{
    string productID = 1;
}

message DiscountRatio{
    int32 preRequisite = 1;
    int32 entitled = 2;
}

message DiscountValue{
    float value = 1;
    int32 requiredProducts = 2;
}

message ProductDiscount {
    string discountID = 1;
    string title = 2;
    string summary = 3;
    string type = 4;
    DiscountRatio discountRatio = 5;
    DiscountValue discountValue = 6;
    repeated string productIDs = 7;
    int32 allocationlimit = 8;
}

message ListRequest{}

message ListResponse{
    repeated ProductDiscount discounts = 1;
}

